force-app/main/default/objects/Service_Agreement_Relationship__c/Service_Agreement_Relationship__c.object-meta.xml
<CustomObject>
    <label>Service Agreement Relationship</label>
    <nameField>
        <displayFormat>SAR-{000000}</displayFormat>
        <label>Service Agreement Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Agreement Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>