force-app/main/default/objects/Service_Agreement_Relationship__c/fields/Child_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Child_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Agreement</label>
    <referenceTo>Service_Agreement__c</referenceTo>
    <relationshipLabel>Service Agreement Relationships (Child Agreement)</relationshipLabel>
    <relationshipName>Service_Agreement_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>