force-app/main/default/objects/Service_Agreement_Relationship__c/fields/Parent_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Parent_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Agreement</label>
    <referenceTo>Service_Agreement__c</referenceTo>
    <relationshipLabel>Service Agreement Relationships</relationshipLabel>
    <relationshipName>Service_Agreement_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>