force-app/main/default/objects/Service_Agreement_Relationship__c/fields/Relationship_Key__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Key__c</fullName>
    <externalId>true</externalId>
    <label>Relationship Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>